ABXMED-38: Fix font on ie

--- a/scss/blocks/_block-cta.scss
+++ b/scss/blocks/_block-cta.scss
@@ -17,10 +17,10 @@
   }
 
   &__content {
+    @include container($susy-desktop);
+    padding: 0;
     position: relative;
     z-index: 5;
-    padding: 0;
-    @include container($susy-desktop);
 
     &__inner {
       display: inline-block;
@@ -33,10 +33,11 @@
     &__title {
       font-size: rem(25px);
       margin-bottom: rem(25px);
+      line-height: 1.2;
 
       @include susy-media(tablet) {
         font-size: rem(50px);
-        margin-bottom: rem(10px);
+        margin-bottom: rem(14px);
       }
     }
 
@@ -87,6 +88,7 @@
 
     @include susy-media(desktop) {
       height: rem(510px);
+      padding-bottom: rem(60px);
     }
 
     .block-cta {
@@ -94,7 +96,7 @@
         img {
           @include susy-media(tablet-landscape) {
             height: auto;
-            width: 105%;
+            width: 110%;
           }
 
           @include susy-media(desktop-superwide) {
@@ -304,6 +306,12 @@
     padding: rem(24px 0 34px 0);
     position: relative;
     overflow: hidden;
+
+    .block-cta {
+      &__content {
+        margin: 0;
+      }
+    }
   }
 
   // Modifiers for background
