--- a/scss/blocks/_block-panels-menu.scss
+++ b/scss/blocks/_block-panels-menu.scss
@@ -1,163 +1,170 @@
 .block-panels-menu {
-	padding-top: rem(40px);
-	padding-bottom: rem(20px);
+  padding-bottom: rem(20px);
+  padding-top: rem(40px);
 
-	@include susy-media(tablet) {
-		padding-top: rem(67px);
-		padding-bottom: rem(75px);
-	}
+  @include susy-media(tablet) {
+    padding-bottom: rem(75px);
+    padding-top: rem(67px);
+  }
 
-	&__item {
-		position: relative;
-		margin-bottom: rem(30px);
-	}
+  &__item {
+    margin-bottom: rem(30px);
+    position: relative;
+  }
 
-	&__title {
-		color: $red-light;
-		margin-bottom: rem(10px);
-		text-align: center;
+  &__title {
+    color: $red-light;
+    margin-bottom: rem(10px);
+    text-align: center;
+    font-size: rem(16px);
 
-		@include susy-media(tablet) {
-			font-size: rem(18px);
-			margin-bottom: rem(4px);
-			text-align: left;
-		}
-	}
+    @include susy-media(tablet) {
+      font-size: rem(18px);
+      margin-bottom: rem(4px);
+      text-align: left;
+    }
+  }
 
-	&__body {
-		ul {
-			@extend %clearfix;
-			list-style: none;
-			padding: rem(11px 9px);
-			background-color: $gray-f7;
-			align-items: stretch;
-			display: flex;
-			flex-flow: row wrap;
+  &__body {
+    ul {
+      @extend %clearfix;
+      align-items: stretch;
+      background-color: $gray-f7;
+      display: flex;
+      flex-wrap: wrap;
+      list-style: none;
+      padding: rem(10px 9px);
 
-			li {
-				float: left;
-				margin-bottom: 0;
-				padding: rem(7px);
-				text-align: center;
-				color: $gray-9;
-				position: relative;
+      li {
+        color: $gray-66;
+        float: left;
+        font-size: rem(14px);
+        margin-bottom: 0;
+        padding: rem(10.5px 15px);
+        position: relative;
+        text-align: center;
 
-				&:before {
-					content: '';
-					background-color: $gray-ee;
-					width: rem(1px);
-					height: rem(14px);
-					position: absolute;
-					top: rem(11px);
-					right: 0;
-				}
+        &:before {
+          background-color: $gray-ee;
+          content: '';
+          height: rem(14px);
+          position: absolute;
+          right: 0;
+          top: rem(11px);
+          width: rem(1px);
+        }
 
-				&:last-child {
-					&:before {
-						background-color: transparent;
-						width: 0;
-						height: 0;
-					}
-				}
+        &:last-child {
+          &:before {
+            background-color: transparent;
+            height: 0;
+            width: 0;
+          }
+        }
 
-				@include susy-media(mobileTiny) {
-					width: 25%;
+        @include susy-media(mobileTiny) {
+          width: 33%;
 
-					&:nth-child(4n) {
-					&:before {
-							background-color: transparent;
-							width: 0;
-							height: 0;
-						}
-					}
-				}
+          &:nth-child(3n) {
+          &:before {
+              background-color: transparent;
+              height: 0;
+              width: 0;
+            }
+          }
+        }
 
-				@include susy-media(mobileLandscapeOnly) {
-					width: 20%;
+        @include susy-media(mobileLandscapeOnly) {
+          width: 19.9%;
 
-					&:nth-child(5n) {
-					&:before {
-							background-color: transparent;
-							width: 0;
-							height: 0;
-						}
-					}
-				}
+          &:nth-child(5n) {
+          &:before {
+              background-color: transparent;
+              height: 0;
+              width: 0;
+            }
+          }
+        }
 
-				@include susy-media(tabletOnly) {
-					width: 10%;
+        @include susy-media(tabletOnly) {
+          width: 16.6%;
 
-					&:nth-child(10n) {
-					&:before {
-							background-color: transparent;
-							width: 0;
-							height: 0;
-						}
-					}
-				}
+          &:nth-child(6n) {
+          &:before {
+              background-color: transparent;
+              height: 0;
+              width: 0;
+            }
+          }
+        }
 
-				@include susy-media(desktop) {
-					width: 6.1%;
-				}
-			}
-		}
-	}
+        @include susy-media(desktop) {
+          min-width: 5%;
+        }
+      }
+    }
+  }
 
-	&__link {
-		overflow: hidden;
-		@include susy-media(tablet) {
-			position: absolute;
-			top: rem(-2px);
-			right: 0;
-		}
-	}
+  &__link {
+    overflow: hidden;
 
-	&--status,
-	&--package-insert,
-	&--msds {
-		font-size: rem(12px);
-		margin-left: rem(1px);
-		margin-top: rem(10px);
-		@include gotham-bold;
+    @include susy-media(tablet) {
+      position: absolute;
+      right: 0;
+      top: rem(-2px);
+    }
+  }
 
-		@include susy-media(tablet) {
-			float: left;
-			margin-top: 0;
-			font-size: rem(10px);
-			height: rem(31px);
-		}
+  &--status,
+  &--package-insert,
+  &--msds {
+    @include gotham-bold;
+    font-size: rem(12px);
+    margin-left: rem(1px);
+    margin-top: rem(10px);
 
-		a {
-			display: block;
-			padding: rem(7px 20px);
-			color: $white;
-			background-color: $base-color;
-			height: rem(40px);
-			line-height: 2.5;
+    @include susy-media(tablet) {
+      float: left;
+      font-size: rem(10px);
+      height: rem(31px);
+      margin-top: 0;
+    }
 
-			@include susy-media(tablet) {
-				height: rem(31px);
-				line-height: 1.75;
-			}
-		}
+    a {
+      background-color: $base-color;
+      color: $white;
+      display: block;
+      height: rem(40px);
+      line-height: 2.5;
+      padding: rem(7px 20px);
 
-		i {
-			font-size: rem(11px);
-			color: $gray-ad;
-			padding-right: rem(8px);
-		}
-	}
+      @include susy-media(tablet) {
+        height: rem(31px);
+        line-height: 1.5;
+      }
 
-	&--status {
-		background-color: $green-77;
-		padding: rem(6px 20px);
-		color: $white;
-		margin-top: 0;
-		line-height: 1.75;
+      &:hover {
+        background-color: darken($base-color, 5%);
+      }
+    }
 
-		i {
-			color: $white;
-			font-size: rem(13px);
-		}
-	}
+    i {
+      color: $gray-ad;
+      font-size: rem(11px);
+      padding-right: rem(8px);
+    }
+  }
+
+  &--status {
+    background-color: $green-77;
+    color: $white;
+    line-height: 1.75;
+    margin-top: 0;
+    padding: rem(6px 20px);
+
+    i {
+      color: $white;
+      font-size: rem(13px);
+    }
+  }
 }
