--- a/scss/blocks/_grid-two-cols.scss
+++ b/scss/blocks/_grid-two-cols.scss
@@ -62,7 +62,7 @@
 
     @include susy-media(desktop) {
       @include span(4 of 12 last);
-      padding: 0 0 0 rem(78px);
+      padding: rem(0 0 0 20px);
       margin: 0;
     }
   }
@@ -102,6 +102,7 @@
   .block-contact-info {
     padding-top: rem(20px);
     padding-bottom: rem(50px);
+    overflow: hidden;
 
     @include susy-media(tablet) {
       padding-top: rem(40px);;
