--- a/scss/helpers/_mixins.scss
+++ b/scss/helpers/_mixins.scss
@@ -35,23 +35,23 @@
 }
 
 @mixin gotham-bold {
-  font-family: 'gotham-bold', Helvetica, Arial, sans-serif;
+  font-family: 'gotham_bold', Helvetica, Arial, sans-serif;
 }
 
 @mixin gotham-light {
-  font-family: 'gotham-light', Helvetica, Arial, sans-serif;
+  font-family: 'gotham_light', Helvetica, Arial, sans-serif;
 }
 
 @mixin gotham-medium {
-  font-family: 'gotham-medium', Helvetica, Arial, sans-serif;
+  font-family: 'gotham_medium', Helvetica, Arial, sans-serif;
 }
 
 @mixin gotham-thinitalic {
-  font-family: 'gotham-thinitalic', Helvetica, Arial, sans-serif;
+  font-family: 'gotham_thinitalic', Helvetica, Arial, sans-serif;
 }
 
 @mixin gotham-book {
-  font-family: 'gotham-book', Helvetica, Arial, sans-serif;
+  font-family: 'gotham_book', Helvetica, Arial, sans-serif;
 }
 
 //Single image background with retina support
